index page = 95%, data-center page started

--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -35,9 +35,9 @@ include _mixins.pug
 						button.footer-search__serch-btn(type="submit")
 							+icon('search')
 				.footer-more-info
-					p.text-small Взаимодействие между клиентом и компанией по вопросам предоставления услуги происходит посредством электронной почты&nbsp;
+					p.text-small Взаимодействие между клиентом и компанией по вопросам предоставления услуги происходит посредством электронной почты &#32;
 						strong sales@vdc.by
-						|&nbsp;и мобильного номера&nbsp;
+						|&nbsp;и мобильного номера &#32;
 						strong 411-6
 						|.
 					p.text-small При отправлении сообщений на данный адрес в теме письма необходимо указывать номер договора.
@@ -66,21 +66,14 @@ include _mixins.pug
 						img(src="img/png/services-1.png", alt="services icon")
 						| velcom.by/wi-fi
 		.footer-partners
-			ul.footer-partners__list
-				li.footer-partners__item
-					a.footer-partners__link(href="#") A1 Austria
-				li.footer-partners__item
-					a.footer-partners__link(href="#") Vipnet
-				li.footer-partners__item
-					a.footer-partners__link(href="#") Vip mobile
-				li.footer-partners__item
-					a.footer-partners__link(href="#") Mtel
-				li.footer-partners__item
-					a.footer-partners__link(href="#") one.Vip
-				li.footer-partners__item
-					a.footer-partners__link(href="#") A1 Slovenia
-				li.footer-partners__item
-					a.footer-partners__link(href="#") FL1
+			a.footer-partners__link(href="#") A1 Austria
+			a.footer-partners__link(href="#") Vipnet
+			a.footer-partners__link(href="#") Vip mobile
+			a.footer-partners__link(href="#") Mtel
+			a.footer-partners__link(href="#") one.Vip
+			a.footer-partners__link(href="#") A1 Slovenia
+			a.footer-partners__link(href="#") FL1
+
 .footer-copyright
 	.box
 		.footer-copyright__wrap
