--- a/src/pug/data-center.pug
+++ b/src/pug/data-center.pug
@@ -3,17 +3,68 @@ include includes/_mixins.pug
 
 
 block title
-	title Главная
+	title Data Center
 block config
 	- var main = true
 block content
 	.header-wrapper
 		+contacts-header
 		.data-center-slider
-			.data-center-slider__slide
+			.data-center-slider__slide(style='background-image:url("img/data-slide-1.jpg")')
 				.box
-					h2.h2 hello
-			.data-center-slider__slide
+					.header-inner.header-inner_row
+						.header-inner__title.header-inner__title_col
+							h1.h1 Система электросбережения
+						.header-inner__desc.header-inner__desc_col
+							p.text-increased.header-inner__text Независимое от городских сетей электропитание на базе ДГУ, также по принципу N+1, что превосходит требования Tier III
+							.datacenter-characteristics
+								+datacenter-characteristics('6 620', 'кв.м. площадь ЦОД')
+								+datacenter-characteristics('800', 'Серверных стоек')
+								+datacenter-characteristics('4', 'Машинных зала')
+			.data-center-slider__slide(style='background-image:url("img/data-slide-2.jpg")')
 				.box
-					h2.h2 world
-				
+					.header-inner.header-inner_row
+						.header-inner__title.header-inner__title_col
+							h1.h1 Дата-центр
+						.header-inner__desc.header-inner__desc_col
+							p.text.primary ЦОД нашего уровня имеют собственную территорию, что исключает форс-мажорных ситуаций с окончанием сроков аренды у самого владельца ЦОД
+							.datacenter-characteristics
+								+datacenter-characteristics('35 000', 'Общая проектная площадь кв.м.')
+								+datacenter-characteristics('6620', 'Площадь зданий и сооружений кв.м.')
+	+breadcrumbs(['Главная', 'Дата-центер'])
+	.box
+		.content-wrap
+			aside.side-bar
+				.side-bar__nav
+					+link-navigation(['Главная', 'Приватность информации', 'Дата-Центр', 'Услуги', 'Партнеры', 'Клиенты и проекты', 'Контакты'])
+			.content-inner
+				h2.h2.content-inner__title ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
+				.datacenter-characteristics
+					+datacenter-characteristics('99,982%', 'Уровень доступности сервисов')
+					+datacenter-characteristics('35000 м²', 'Общая проектная площадь')
+					+datacenter-characteristics('6620 м²', 'Площадь зданий и сооружений')
+				.content-inner-item
+					h3.h3 Сертификация
+					.sertification-wrap
+						a(href="").sertification-link
+							img.sertification-link__img(src="", alt="PCI DSS")
+							p.text-primary.sertification-link__title PCI DSS
+						a(href="").sertification-link
+							img.sertification-link__img(src="", alt="ISO27001")
+							p.text-primary.sertification-link__title ISO27001
+						a(href="").sertification-link
+							img.sertification-link__img(src="", alt="Tier III Design")
+							p.text-primary.sertification-link__title Tier III Design
+						a(href="").sertification-link
+							img.sertification-link__img(src="", alt="Tier III Facility")
+							p.text-primary.sertification-link__title Tier III Facility
+				.content-inner-item
+					h3.h3 Система электроснабжения
+				.content-inner-item
+					h3.h3 Система поддержания климата
+				.content-inner-item
+					h3.h3 Каналы связи
+				.content-inner-item
+					h3.h3 Физическая безопасность
+				.content-inner-item
+					h3.h3 Система поддержания климата
