--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -1,5 +1,6 @@
 .nav-menu
 	width: 100%
+	height: 3.75rem
 	display: flex
 	align-items: center
 	background-color: $main-decor-color
@@ -11,12 +12,12 @@
 	left: 0
 	&__list
 		display: flex
-		margin-left: 2.3rem
+		margin-left: 2rem
 	&__btn-wrap
 		margin-left: auto
 		margin-right: 0
 	&__item
-		margin-right: 2.3rem
+		margin-right: 2.2rem
 		&:last-child
 			margin-right: 0
 	&__link
@@ -27,12 +28,34 @@
 		+tr(color .3s ease)
 		&:hover
 			color:#917d12
+	+r(980)
+		&__list
+			margin-left: 0
+		&__link
+			font-size: 0.875rem
+	+r(768)
+		padding-top: 15px
+		box-sizing: border-box
+		align-items: flex-start
+		&__list
+			display: none
 .nav-mob-btn
 	display: none
+	font-size: 1.25rem
+	font-weight: bold
+	letter-spacing: -0.02em
+	span
+		display: block
+		text-transform: uppercase
+		font-size: 0.46875rem
+		line-height: 1.2
+		margin-top: 4px
+		letter-spacing: 0.05em
+	+r(768)
+		display: block
 .nav-burger
 	display: block
 	width: 25px
-	height: 24px
 	&__line
 		display: block
 		height: 2px
@@ -41,6 +64,8 @@
 		margin-bottom: 3px
 		&:last-child
 			margin-bottom: 0
+	+r(980)
+		order: 2
 
 .application-btn
 	line-height: 2.3
@@ -48,3 +73,13 @@
 		display: block
 	&__mob
 		display: none
+		width: 1rem
+		height: 1rem
+	+r(980)
+		border: none
+		padding: 0
+		margin-right: 20px
+		&__desc
+			display: none
+		&__mob
+			display: flex
