--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -1,13 +1,17 @@
 .h1
 	color: #ffffff
 	font-size: 3rem
-  	line-height: 1.042
-  	font-weight: 400
+	line-height: 1.042
+	font-weight: 400
+	+r(768)
+		font-size: 1.875rem
 .h2
 	color: #000000
 	font-size: 2rem
 	line-height: 1.75
 	font-weight: 400
+	+r(768)
+		font-size: 1.875rem
 .h3
 	color: #000000
 	font-size: 1.25rem
@@ -41,10 +45,11 @@
 
 .box
 	width: 100%
-	max-width: 76.5rem
-	height: inherit
+	max-width: 78.5rem
+	height: 100%
 	margin: 0 auto
-
+	padding: 0 1rem
+	
 .link-button
 	+link-btn( #000000,$main-decor-color, #f2db00, #edcd1c)
 	&_small
@@ -66,6 +71,9 @@
 		+tr(color .3s ease)
 		&:hover
 			color: #ecdc00
+	+r(440)
+		&__link
+			max-width: 110px;
 .link-more
 	display: flex
 	align-items: center
@@ -90,13 +98,17 @@
 	align-items: flex-end
 	color: #ffffff
 	width: 100%
-	max-width: 76.5rem
+	max-width: 78.5rem
+	padding: 0 1rem
 	position: absolute
+	z-index: 7
 	top: 97px
 	left: 50%
 	transform: translateX(-50%)
 	&__phones
 		display: flex
+		+r(768)
+			display: none
 	&__link
 		display: flex
 		align-items: center
@@ -118,10 +130,17 @@
 	align-items: flex-start
 	+box
 	border: 1px solid #cccccc
-	padding: 2.3rem 2.09rem 2.09rem
+	padding: 2.375rem 2.09rem 2.09375rem 2.09rem
 	background-color: #ffffff
 	position: relative
+	z-index: 1
 	+tr(all .3s ease)
+	+r(1024)
+		width: 48.68%
+		margin-bottom: 1.6875rem
+	+r(720)
+		padding: 2.375rem 1.625rem 2.09375rem 1.625rem
+		width: 100%
 	&__title
 		width: 100%
 		position: relative
@@ -140,10 +159,13 @@
 		margin-top: auto
 	&__icon
 		position: absolute
+		z-index: -1
 		bottom: 0.78rem
 		right: 2.125rem
 		height: 7.1875rem
 		width: 7.5rem
+		+r(1100)
+			right: 1rem
 	&:hover
 		background-color: #fff164
 		border-color: #fff164
@@ -166,8 +188,15 @@
 	&__desc
 
 .second-news
-	display: flex
 	width: 50%
+	+r(980)
+		width: 100%
+		margin-bottom: 20px
+	&__inner
+		display: flex
+		width: 90%
+		+r(980)
+			width: 95%
 	&__img
 		width: 10.78rem
 		margin-right: 2rem
