--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -20,15 +20,15 @@ include _mixins.pug
 						p.text-primary Сб–вс: выходной 
 				.footer-action
 					.footer-social
-						.footer-social__link.footer-social__link_insta
+						a(href="#").footer-social__link.footer-social__link_insta
 							+icon('social-instagram')
-						.footer-social__link.footer-social__link_vk
+						a(href="#").footer-social__link.footer-social__link_vk
 							+icon('social-vk')
-						.footer-social__link.footer-social__link_yout
+						a(href="#").footer-social__link.footer-social__link_yout
 							+icon('social-youtube')
-						.footer-social__link.footer-social__link_fb
+						a(href="#").footer-social__link.footer-social__link_fb
 							+icon('social-facebook')
-						.footer-social__link.footer-social__link_tw
+						a(href="#").footer-social__link.footer-social__link_tw
 							+icon('social-twitter')
 					.footer-search
 						input(type="search").footer-search__field
