--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -92,10 +92,41 @@
 		border-radius: 50%
 		margin-right: 1rem
 		color: #ffffff
-		+tr(background-color .3s ease)
+		cursor: pointer
+		+tr(all .3s ease)
+		position: relative
+		z-index: 1
+		&:after
+			content: ''
+			display: block
+			width: 100%
+			height: 100%
+			border-radius: 50%
+			opacity: 0
+			z-index: -1
+			position: absolute
+			left: 0
+			top: 0
+			+tr(all .3s ease)
+		&_insta
+			&:after
+				background-image: linear-gradient( 45deg, rgb(255,216,32) 0%, rgb(253,55,111) 50%, rgb(161,25,170) 100%)
+		&_vk
+			&:after
+				background-color: #4d76a1
+		&_yout
+			&:after
+				background-color: #be1e2d
+		&_fb
+			&:after
+				background-color: #3a589b
+		&_tw
+			&:after
+				background-color: #55acee
 		&:hover
-			background-color: red
-			cursor: pointer
+			background-color: #ffffff
+			&:after
+				opacity: 1
 		&:last-child
 			margin-right: 0
 	+r(1100)
@@ -112,10 +143,14 @@
 		line-height: 2.5rem
 		padding-left: 1rem
 		padding-right: 1rem
+		+tr(all .3s ease)
 		&::-webkit-search-cancel-button
 			display: none
 		&::-ms-clear
 			display: none
+		&:hover,
+		&:focus
+			border-color: #000000
 	&__serch-btn
 		width: 1.25rem
 		height: 1.25rem
@@ -178,6 +213,7 @@
 		font-weight: bold
 		font-size: 0.875rem
 		line-height: 1.714
+		+tr(color .3s ease)
 		&::after
 			content: '|'
 			display: inline-block
@@ -187,6 +223,8 @@
 		&:last-child
 			&::after
 				display: none
+		&:hover
+			color: #ecdc00
 
 .footer-copyright
 	&__wrap
@@ -197,6 +235,11 @@
 	&__map
 		display: flex
 		width: 50%
+		a
+			+tr(color .3s ease)
+			&:hover
+				color: #000000
+
 	+r(680)
 		&__item
 			width: 100%
@@ -208,6 +251,12 @@
 .site-dev
 	margin-right: 0
 	margin-left: auto
+	+tr(color .3s ease)
+	&:hover
+		color: #000000
 	a
 		color: #000000
 		font-weight: bold
+		+tr(color .3s ease)
+		&:hover
+			color: #ecdc00
