--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -113,10 +113,8 @@ body
 .header-wrapper
 	height: 100%
 	position: relative
+	z-index: 0
 	padding-top: 3.75rem
-	background-repeat: no-repeat
-	background-position: center center
-	background-size: cover
 	&_full-page
 		height: 100vh
 
@@ -124,6 +122,10 @@ body
 	height: 100%
 	display: flex
 	flex-direction: column
+	position: relative
+	z-index: 2
+	&_inner-page
+		padding: 11.15625rem 0 4.0625rem
 	&_row
 		flex-direction: row
 		margin-top: 13.125rem
@@ -397,17 +399,180 @@ ul.slick-dots *
 
 .content-wrap
 	display: flex
+	+r(768)
+		flex-direction: column
+
 .side-bar
 	width: 25%
+	+r(768)
+		width: 100%
 
 .content-inner
 	width: 75%
 	&__title
 		line-height: 1.406
+	+r(768)
+		width: 100%
+		&__title
+			font-size: 1.3125rem
+			line-height: 1.43
+
+.content-inner-item
+	border-top: 1px solid #cccccc
+	padding-top: 4.375rem
+	padding-bottom: 3.75rem
+	position: relative
+	&__title
+		margin-bottom: 3.875rem
+	&__decor
+		position: absolute
+		top: 4.375rem
+		right: 0
+		width: 80px
+		height: 90px
+
 
 .sertification-wrap
 	display: flex
+	align-items: flex-end
+	max-width: 44.625rem
+	justify-content: space-between
 
 .sertification-link
+	&__img
+		display: inline-block
+		max-width: 5.75rem
+		height: 3.65625rem
+		+vertical
+		margin-bottom: 11px
+		img
+			max-width: 100%
+			max-height: 3.65625rem
+			vertical-align: middle
+
+.parameters-table
 	display: flex
-	align-items: center
+	align-items: flex-start
+
+.data-parameters
+	width: 50%
+	max-width: 23.125rem
+	display: flex
+	flex-wrap: wrap
+	margin-right: 2rem
+	&:last-child
+		margin-right: 0
+	&__title
+		width: 70%
+		border-bottom: 1px solid #cccccc
+		padding-bottom: 1.3125rem
+		padding-right: 50px
+		margin-bottom: 1.09375rem
+	&__desc
+		width: 30%
+		border-bottom: 1px solid #cccccc
+		padding-bottom: 1.3125rem
+		margin-bottom: 1.09375rem
+		font-weight: bold
+		color: #000000
+	&__check
+		display: block
+		width: 30px
+		height: 20px
+
+.data-center-details
+	background-color: #fcfcfc
+	position: relative
+	max-width: 44.625rem
+	&:after
+		content: ''
+		display: block
+		background-color: #fcfcfc
+		height: 100%
+		width: 100%
+		position: absolute
+		top: 0
+		right: 100%
+	&:before
+		content: ''
+		display: block
+		background-color: #fcfcfc
+		height: 100%
+		width: 100%
+		position: absolute
+		top: 0
+		left: 100%
+	padding: 4.375rem 0
+	&__list
+		margin-top: 1.5625rem
+	&__item
+		padding-left: 2.5rem
+		margin-bottom: 2rem
+		position: relative
+		&::after
+			content: ''
+			display: block
+			background-color: #f2db00
+			width: .5rem
+			height: .5rem
+			border-radius: 50%
+			position: absolute
+			left: 0
+			top: .5rem
+		&:last-child
+			margin-bottom: 0
+		span
+			display: inline-block
+			padding-left: 2rem
+
+.data-center-cooperation
+	max-width: 44.625rem
+	padding: 4.25rem 0 6.875rem
+	&__promo
+		background-repeat: no-repeat
+		background-size: cover
+		padding: 2.25rem 2.25rem 4.0625rem 2.25rem
+		display: flex
+		justify-content: flex-end
+		margin-bottom: 3.46875rem
+
+.data-center-partner
+	display: inline-block
+	background-color: #fff233
+	padding: 2.09375rem 1.8125rem 2.09375rem 2.1875rem
+	position: relative
+	z-index: 1
+	box-shadow: none
+	+tr(all .3s ease)
+	&:hover
+		box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2)
+	&__title
+		font-weight: bold
+		font-size: 1.375rem
+		line-height: 1.5rem
+		margin-bottom: 1.5625rem
+		text-transform: uppercase
+	&__text
+		max-width: 14.0625rem
+		font-size: 1rem
+		margin-bottom: 2.5rem
+		line-height: 1.5rem
+	&__link
+		background-color: #f2db00
+		&:hover
+			background-color: #ffffff
+
+.comandos-group
+	border-bottom: 1px solid #cccccc
+	margin-bottom: 4.6875rem
+	&:last-child
+		border: none
+	&__wrap
+		display: flex
+		flex-wrap: wrap
+		margin-top: 4.0625rem
+	&__title
+		line-height: 1
+	+r(650)
+		&__wrap
+			justify-content: space-between
