--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -68,7 +68,19 @@
 		line-height: 1.5
 		font-weight: bold
 		color: #000000
+		width: auto
+		position: relative
 		+tr(color .3s ease)
+		&_active
+			&::after
+				content: ''
+				display: block
+				height: 2px
+				width: 100%
+				background-color: #fff233
+				position: absolute
+				left: 0
+				bottom: -0.5rem
 		&:hover
 			color: #ecdc00
 	+r(440)
@@ -107,8 +119,6 @@
 	transform: translateX(-50%)
 	&__phones
 		display: flex
-		+r(768)
-			display: none
 	&__link
 		display: flex
 		align-items: center
@@ -122,6 +132,9 @@
 			font-size: 0.5625rem
 			line-height: 1
 			max-width: 3rem
+	+r(768)
+		&__phones
+			display: none
 
 .service-card
 	width: 31.781%
@@ -135,12 +148,6 @@
 	position: relative
 	z-index: 1
 	+tr(all .3s ease)
-	+r(1024)
-		width: 48.68%
-		margin-bottom: 1.6875rem
-	+r(720)
-		padding: 2.375rem 1.625rem 2.09375rem 1.625rem
-		width: 100%
 	&__title
 		width: 100%
 		position: relative
@@ -164,8 +171,6 @@
 		right: 2.125rem
 		height: 7.1875rem
 		width: 7.5rem
-		+r(1100)
-			right: 1rem
 	&:hover
 		background-color: #fff164
 		border-color: #fff164
@@ -175,9 +180,19 @@
 		right: 0
 	&:active &__link
 		background-color: #edcd1c
+	+r(1100)
+		&__icon
+			right: 1rem
+	+r(1024)
+		width: 48.68%
+		margin-bottom: 1.6875rem
+	+r(720)
+		padding: 2.375rem 1.625rem 2.09375rem 1.625rem
+		width: 100%
 
 .datacenter-characteristics
 	display: flex
+	flex-wrap: wrap
 	justify-content: space-between
 	&__item
 		width: 30%
@@ -186,17 +201,24 @@
 		line-height: 1.167
 		font-weight:bold
 	&__desc
-
+		max-width: 10rem
+	&_data
+		margin-top: 3.125rem
+		margin-bottom: 4.0625rem
+	+r(768)
+		&__item
+			width: 45%
+			margin-bottom: 2.25rem
+		&__value
+			font-size: 2.375rem
+		&_data
+			margin-top: 2.5rem
+			margin-bottom: 3.125rem
 .second-news
 	width: 50%
-	+r(980)
-		width: 100%
-		margin-bottom: 20px
 	&__inner
 		display: flex
 		width: 90%
-		+r(980)
-			width: 95%
 	&__img
 		width: 10.78rem
 		margin-right: 2rem
@@ -204,6 +226,11 @@
 		max-width: 19.375rem
 	&__text
 		color: #000000
+	+r(980)
+		width: 100%
+		margin-bottom: 20px
+		&__inner
+			width: 95%
 
 .v-style-text
 	display: inline-block
@@ -220,3 +247,114 @@
 		top: 0.4rem
 		left: -4px
 		transform: skew(-12deg)
+
+.breadcrumbs
+	margin-top: 2.8125rem
+	margin-bottom: 1.875rem
+	&__link
+		display: inline-block
+		font-size: 0.5625rem
+		line-height: 1
+		color: rgba(#000000, .5)
+		text-transform: uppercase
+		&::after
+			content: '/'
+			display: inline-block
+			padding: 0 .5rem
+		&:last-child
+			pointer-events: none
+			&::after
+				display: none
+		&:hover
+			&::after
+				color: rgba(#000000, .5)
+
+.wrapper-bg
+	position: absolute
+	top: 0
+	left: 0
+	z-index: 1
+	width: 100%
+	height: 100%
+	background-repeat: no-repeat
+	background-position: center center
+	background-size: cover
+	&:before
+		content: ''
+		+coverdiv
+		background-color: rgba(#242424, .7);
+		z-index: 1
+
+.video-container
+	position: relative
+	bottom: 0%
+	left: 0%
+	height: 100%
+	width: 100%
+	overflow: hidden
+	
+	
+	video
+		position: absolute
+		z-index: 0
+		bottom: 0
+		min-height: 100%
+		width: 100%
+		height: 100%
+		opacity: 0
+		+tr(opacity 1s ease)
+		object-fit: cover
+		+ie11
+			display: none
+		// @supports (object-fit: cover)
+		//     object-fit: cover
+		&.fillWidth
+			width: 100%
+			+r(1024)
+			@supports (object-position: center)
+				object-fit: cover
+		&.fadeIn
+			opacity: 1
+
+.worker-item
+	display: flex
+	flex-direction: column
+	width: 22.26%
+	margin-right: 3.65%
+	margin-bottom: 4.25rem
+	&:nth-child(4n)
+		margin-right: 0
+	&__photo
+		background-color: #f0f0f0
+		width: 100%
+		max-height: 204px
+		max-width: 204px
+		margin-bottom: 2.375rem
+		img
+			display: block
+			max-width: 100%
+			margin: 0 auto
+	&__name
+		font-size: 1.125rem
+		line-height: 1.333
+		margin-bottom: 1.25rem
+	&__position
+		font-size: 0.875rem
+		line-height: 1.714
+		color: #767a7d
+	+r(1024)
+		width: 31%
+		margin-right: 3.5%
+		&:nth-child(4n)
+			margin-right: 3.5%
+		&:nth-child(3n)
+			margin-right: 0
+		&__photo
+			max-height: 236px
+			max-width: 236px
+	+r(650)
+		width: 45.92%
+		margin-right: 0
+		&__photo
+			max-height: 158px
+			max-width: 158px
