index page ~96% - no-animation. +mob menu

--- a/src/pug/data-center-comandos.pug
+++ b/src/pug/data-center-comandos.pug
@@ -18,8 +18,8 @@ block content
 		+breadcrumbs(['Главная', 'Дата-центер'])
 	.box
 		.content-wrap
-			aside.side-bar
-				.side-bar__nav
+			aside.side-bar.js-stick-parent
+				.side-bar__nav.js-stick
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
 				.comandos-group
