--- a/src/pug/data-center.pug
+++ b/src/pug/data-center.pug
@@ -35,8 +35,8 @@ block content
 		+breadcrumbs(['Главная', 'Дата-центер'])
 	.box
 		.content-wrap
-			aside.side-bar
-				.side-bar__nav
+			aside.side-bar.js-stick-parent
+				.side-bar__nav.js-stick
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
 				h2.h2.content-inner__title ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
@@ -85,7 +85,7 @@ block content
 							dt.data-parameters__title.text-small Электрическая мощность одного шкафа
 							dd.data-parameters__desc.text-small до 12 кВт
 					.content-inner-item__decor
-						+icon('characteristics-electro')
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 50.5 61.3"><path fill="currentcolor" d="M30.4 8.7L25.3 0l-5.1 8.7H0v1h6.6L20 15.3V24H0v1h6.6L20 30.6V35L9.3 60l-.2.2.1.1H3.4v1h6.3l.1-.1.1-.1V61a22.56 22.56 0 0 1 15.3-5.8A22.09 22.09 0 0 1 40.5 61v.1l.1.1.1.1H47v-1h-5.8l.1-.1-.1-.2-10.6-25v-4.4L43.9 25h6.6v-1h-20v-8.7l13.3-5.6h6.6v-1zM21 23.4v-7.2l3.6 3.6zm4.3-2.9l3.5 3.5h-7zM21 26.3l3.6 3.6-3.6 3.6zm0-1.3h8.5l-4.3 4.3zm8.6 1.3v7.2L26 29.9zM26 19.8l3.6-3.6v7.2zm3.6-5.1L25.3 19 21 14.7v-5h8.6zM25.3 2l3.9 6.7h-7.9zM9.2 9.7H20v4.5zm0 15.3H20v4.5zm10 14.3l5.4 5.4-5.9 5.9-3-3zm-3.9 9.3l2.7 2.7-6.8 6.8zm3.4 3.4l2.5 2.5a24.28 24.28 0 0 0-7.7 2.7zm3.8 2.4l-3.1-3.1 5.9-5.9 5.9 5.9-3.1 3.1a26.35 26.35 0 0 0-2.8-.2 24.58 24.58 0 0 0-2.8.2zm3.5-9.7l5.4-5.4 3.5 8.2-3 3zm5.9 7.3l5.2 5.2a24.28 24.28 0 0 0-7.7-2.7zm.7-.7l2.7-2.7 4 9.5zm-1.6-13L25.3 44l-5.7-5.7 1.4-3.2V35l4.3-4.3 4.3 4.3v.2zM41.3 25l-10.7 4.5V25zM30.6 14.2V9.7h10.7z"/><path fill="currentcolor" d="M0 11.1h6.7v1H0zm0 2.4h6.7v1H0zm43.8-2.4h6.7v1h-6.7zm0 2.4h6.7v1h-6.7zM0 26.4h6.7v1H0zm0 2.4h6.7v1H0zm43.8-2.4h6.7v1h-6.7zm0 2.4h6.7v1h-6.7z"/></svg>
 				.content-inner-item
 					h3.h3.content-inner-item__title Система поддержания климата
 					.parameters-table
@@ -102,7 +102,7 @@ block content
 							dt.data-parameters__title.text-small Температура воздуха
 							dd.data-parameters__desc.text-small 23°±2°
 					.content-inner-item__decor
-						+icon('characteristics-climate')
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 60.9 60.9"><path fill="currentcolor" d="M30.5 4.4a26 26 0 1 0 26 26 26 26 0 0 0-26-26zm17.7 43.8a25.11 25.11 0 1 1 7.3-17.7 25 25 0 0 1-7.3 17.7z"/><path fill="currentcolor" d="M0 0v60.9h60.9V0zm1 1h58.9v58.9H1z"/><path fill="currentcolor" d="M39.8 10.5l-.7-.3-.1.7a21 21 0 0 1-3.2 10 22.61 22.61 0 0 1-1.9 2.5 3.39 3.39 0 0 1-.6.6.37.37 0 0 0-.3-.1 38.19 38.19 0 0 0 1.4-10.2 23.83 23.83 0 0 0-.4-4.6l-.1-.4-.4-.1a18.29 18.29 0 0 0-3.3-.2 23.77 23.77 0 0 0-7.6 1.3l-.4.3.5.5a20.11 20.11 0 0 1 5.3 13v.2c-.1 0-.2.1-.3.1A36.83 36.83 0 0 0 18 12.6l-.3-.2-.3.2a17.14 17.14 0 0 0-2.5 2.2 22.41 22.41 0 0 0-4.4 6.3l-.3.7.7.1a21 21 0 0 1 10 3.2 22.61 22.61 0 0 1 2.5 1.9 3.39 3.39 0 0 1 .6.6c0 .1-.1.2-.1.3a38.19 38.19 0 0 0-10.2-1.4 23.83 23.83 0 0 0-4.6.4l-.4.1-.1.4a18.29 18.29 0 0 0-.2 3.3 23.77 23.77 0 0 0 1.3 7.6l.2.7.5-.5a20.11 20.11 0 0 1 13-5.3h.2c0 .1.1.2.1.3a36.83 36.83 0 0 0-11.2 9.7l-.2.3.2.3a17.14 17.14 0 0 0 2.2 2.5 22.41 22.41 0 0 0 6.3 4.4l.7.3.1-.7a21 21 0 0 1 3.2-10 22.61 22.61 0 0 1 1.9-2.5 3.39 3.39 0 0 1 .6-.6c.1 0 .2.1.3.1a38.19 38.19 0 0 0-1.4 10.2 23.83 23.83 0 0 0 .4 4.6l.1.4.4.1a18.29 18.29 0 0 0 3.3.2 23.77 23.77 0 0 0 7.6-1.3l.7-.2-.5-.5a20.11 20.11 0 0 1-5.3-13v-.2c.1 0 .2-.1.3-.1a36.83 36.83 0 0 0 9.7 11.2l.3.2.3-.2a17.14 17.14 0 0 0 2.5-2.2 22.41 22.41 0 0 0 4.4-6.3l.3-.7-.9-.4a21 21 0 0 1-10-3.2 22.61 22.61 0 0 1-2.5-1.9 3.39 3.39 0 0 1-.6-.6c0-.1.1-.2.1-.3a38.19 38.19 0 0 0 10.2 1.4 23.83 23.83 0 0 0 4.6-.4l.4-.1.1-.4a18.29 18.29 0 0 0 .2-3.3 23.77 23.77 0 0 0-1.3-7.6L51 22l-.5.5a20.11 20.11 0 0 1-13 5.3h-.2c0-.1-.1-.2-.1-.3a36.83 36.83 0 0 0 11.2-9.7l.2-.3-.2-.3a17.14 17.14 0 0 0-2.2-2.5 29.44 29.44 0 0 0-6.4-4.2zm-3.2 20a6.15 6.15 0 1 1-1.8-4.3 5.87 5.87 0 0 1 1.8 4.3zm-12.7-20a20.16 20.16 0 0 1 6.5-1.1 26.35 26.35 0 0 1 2.8.2 29.34 29.34 0 0 1 .3 4.1 36.09 36.09 0 0 1-.8 7.3c-.2.9-.4 1.7-.5 2.2 0 .1-.1.2-.1.3a9.85 9.85 0 0 0-1.7-.2c-.5 0-1 .1-1.5.1.1-1.8-.4-7.3-5-12.9zM11.7 20.9a24.61 24.61 0 0 1 3.9-5.4 16.8 16.8 0 0 1 2.1-1.8 31.74 31.74 0 0 1 6.8 7 23.33 23.33 0 0 1 1.9 2.9 5.74 5.74 0 0 1 .4.7 6.89 6.89 0 0 0-2.3 2.2 21.52 21.52 0 0 0-12.8-5.6zM10.5 37a20.16 20.16 0 0 1-1.1-6.5 26.35 26.35 0 0 1 .2-2.8 29.34 29.34 0 0 1 4.1-.3 36.09 36.09 0 0 1 7.3.8c.9.2 1.7.4 2.2.5.1 0 .3.1.4.1a9.85 9.85 0 0 0-.2 1.7 6.15 6.15 0 0 0 .1 1.4 21.14 21.14 0 0 0-13 5.1zm10.4 12.2a24.61 24.61 0 0 1-5.4-3.9 16.8 16.8 0 0 1-1.8-2.1 31.74 31.74 0 0 1 7-6.8 23.33 23.33 0 0 1 2.9-1.9 5.74 5.74 0 0 1 .7-.4 6.89 6.89 0 0 0 2.2 2.3 21.87 21.87 0 0 0-5.6 12.8zm16 1.2a20.16 20.16 0 0 1-6.5 1.1 26.35 26.35 0 0 1-2.8-.2 29.34 29.34 0 0 1-.3-4.1 36.09 36.09 0 0 1 .8-7.3c.2-.9.4-1.7.5-2.2 0-.1.1-.3.1-.4a11 11 0 0 0 1.8.2 6.6 6.6 0 0 0 1.4-.1 20.81 20.81 0 0 0 5 13zM49.2 40a24.61 24.61 0 0 1-3.9 5.4 16.8 16.8 0 0 1-2.1 1.8 31.74 31.74 0 0 1-6.8-7 23.33 23.33 0 0 1-1.9-2.9 5.74 5.74 0 0 1-.4-.7 6.89 6.89 0 0 0 2.3-2.2A21.24 21.24 0 0 0 49.2 40zm1.2-16a20.16 20.16 0 0 1 1.1 6.5 26.35 26.35 0 0 1-.2 2.8 29.34 29.34 0 0 1-4.1.3 36.09 36.09 0 0 1-7.3-.8c-.9-.2-1.7-.4-2.2-.5-.1 0-.3-.1-.4-.1a9.85 9.85 0 0 0 .2-1.7 6.15 6.15 0 0 0-.1-1.4 21.81 21.81 0 0 0 13-5.1zm-10.3.5c-1.1.8-2.1 1.5-2.8 1.9a5.74 5.74 0 0 1-.7.4 6.89 6.89 0 0 0-2.2-2.3A21.24 21.24 0 0 0 40 11.7a24.61 24.61 0 0 1 5.4 3.9 16.8 16.8 0 0 1 1.8 2.1 34.33 34.33 0 0 1-7.1 6.8zM53.8 5.6h2v1h-2zm0 48.7h2v1h-2zM5.1 5.6h2v1h-2zm0 48.7h2v1h-2z"/><path fill="currentcolor" d="M30.5 27a3.5 3.5 0 1 0 3.5 3.5 3.48 3.48 0 0 0-3.5-3.5zm0 6a2.5 2.5 0 1 1 2.5-2.5 2.61 2.61 0 0 1-2.5 2.5z"/></svg>
 				.content-inner-item
 					h3.h3.content-inner-item__title Каналы связи
 					.parameters-table
@@ -119,7 +119,7 @@ block content
 								span.data-parameters__check
 									+icon('checked')
 					.content-inner-item__decor
-						+icon('services-colocation')
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 53 63.5"><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M.5.5h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m-22 9h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m14-3h-2m-2 0h-2m-2 0h-2m-26 12h52v16H.5zm4 23v-7m44 0v7m-42-18v6m4-6v6m4-6v6m4-6v6m4-6v6"/><circle cx="43.5" cy="28.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 48.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="48.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 8.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="8.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M7.5 60.5h38"/></svg>
 				.content-inner-item
 					h3.h3.content-inner-item__title Физическая безопасность
 					.parameters-table
@@ -144,7 +144,7 @@ block content
 							dt.data-parameters__title.text-small Мониторинг инфраструктуры
 							dd.data-parameters__desc.text-small 24/7
 					.content-inner-item__decor
-						+icon('characteristics-security')
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 58.8 60.2"><path fill="currentcolor" d="M57.8 37.7v10.8H42.1L35.4 32a6.56 6.56 0 0 0 3.6-5.8 1.7 1.7 0 0 0-.1-.7l15.7-4.2a4.17 4.17 0 0 0 3.1-4.1 4.1 4.1 0 0 0-.1-1.1l-3.4-13A4.17 4.17 0 0 0 50.1 0a4.1 4.1 0 0 0-1.1.1L3.2 12.3 5.1 17 0 18.4l3 11.4.5-.1L9.6 28l1.9 4.7.4-.1 14.5-3.9a6.55 6.55 0 0 0 6 4 10 10 0 0 0 1.6-.2.52.52 0 0 0 .4-.2l7 17.1h16.4v10.8h1V37.7zM3.7 28.5L1.2 19l4.2-1 3.8 9.1zm6.9-.7l-.2-.6-5.8-14.3L49.3 1.1a2.2 2.2 0 0 1 .8-.1 3.3 3.3 0 0 1 3.1 2.4l3.4 13a2.49 2.49 0 0 1 .1.8 3.3 3.3 0 0 1-2.4 3.1L12.1 31.6zm23.2 3.8a5.85 5.85 0 0 1-1.3.2 5.65 5.65 0 0 1-5-3.2L38 25.8v.5a5.53 5.53 0 0 1-4.2 5.3z"/><path fill="currentcolor" d="M48.23 7.75l1-.26 1.94 7.35-1 .26zm-4.5 1.11l1-.26 1.92 7.4-1 .26zm-4.39 1.29l1-.26 1.94 7.35-1 .26z"/></svg>
 				.data-center-details
 					h3.h3 Дата-центры подключены к точкам обмена трафиком MSK-IX, DATA-IX. Точки присутствия на ММТС-9, ММТС-10. Собственная оптоволоконная сеть
 					ul.data-center-details__list
