--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -31,9 +31,10 @@ include _mixins.pug
 						a(href="#").footer-social__link.footer-social__link_tw
 							+icon('social-twitter')
 					.footer-search
-						input(type="search").footer-search__field
-						button.footer-search__serch-btn(type="submit")
-							+icon('search')
+						form.footer-search__form(action="#")
+							input(type="search").footer-search__field
+							button.footer-search__serch-btn(type="submit")
+								+icon('search')
 				.footer-more-info
 					p.text-small Взаимодействие между клиентом и компанией по вопросам предоставления услуги происходит посредством электронной почты &#32;
 						strong sales@vdc.by
