--- a/src/pug/includes/_mixins.pug
+++ b/src/pug/includes/_mixins.pug
@@ -4,7 +4,7 @@ mixin icon(name)
 
 mixin nav-menu
 	nav.nav-menu
-		button.nav-burger
+		button.nav-burger.js-menu
 			span.nav-burger__line
 			span.nav-burger__line
 			span.nav-burger__line
@@ -49,16 +49,6 @@ mixin contacts-header
 				span Бесплатно в сети velcom
 			a.contacts-header__link(href="te:+375 29 600 20 20") +375 29 600 20 20
 				span Техническая поддержка
-
-mixin service-card(title, desc, icon)
-	a(href="#").service-card
-		h4.service-card__title.h4= title
-			span.service-card__t-arrow
-				+icon('arrow-circle')
-		p.service-card__desc.text-primary= desc
-		span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-		.service-card__icon
-			+icon(icon)
 
 mixin link-more(text, add_class)
 	a.link-more(href="#", class=""+add_class)= text
