--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -1,3 +1,5 @@
+footer
+	position: relative
 .footer-info
 	width: 100%
 	background-color: #ffffff
@@ -37,7 +39,6 @@
 		margin-top: 3.4375rem
 		&__title
 			margin-bottom: 2.03125rem
-
 
 .footer-action
 	width: 50%
@@ -125,6 +126,7 @@
 				background-color: #55acee
 		&:hover
 			background-color: #ffffff
+			color: #ffffff
 			&:after
 				opacity: 1
 		&:last-child
@@ -135,9 +137,16 @@
 .footer-search
 	position: relative
 	text-align: right
+	&__form
+		width: 100%
+		max-width: 15.375rem
+		position: relative
+		&:hover > *,
+			color: #000000
+			border-color: #000000
 	&__field
+		width: 100%
 		display: inline-block
-		width: 15.375rem
 		border: 1px solid #e7e7e7
 		border-radius: 40px
 		line-height: 2.5rem
@@ -148,16 +157,19 @@
 			display: none
 		&::-ms-clear
 			display: none
-		&:hover,
 		&:focus
 			border-color: #000000
+	&__field:focus + &__serch-btn
+		color: #000000
 	&__serch-btn
 		width: 1.25rem
 		height: 1.25rem
 		position: absolute
 		top: 50%
 		right: 1rem
+		color: #e7e7e7
 		transform: translateY(-50%)
+		+tr(all .3s ease)
 	+r(1100)
 		text-align: left
 		
