--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -41,13 +41,13 @@
 			display: none
 .nav-mob-btn
 	display: none
-	font-size: 1.25rem
+	font-size: 20px
 	font-weight: bold
 	letter-spacing: -0.02em
 	span
 		display: block
 		text-transform: uppercase
-		font-size: 0.46875rem
+		font-size: 7.5px
 		line-height: 1.2
 		margin-top: 4px
 		letter-spacing: 0.05em
@@ -56,6 +56,8 @@
 .nav-burger
 	display: block
 	width: 25px
+	padding: 7px
+	box-sizing: content-box
 	&__line
 		display: block
 		height: 2px
